# HOTIRJAM_AI_5

./: .coverage  .gitignore  README.md  pyproject.toml
bridge/: .gitignore  README.md  bridge_receiver.cmd  bridge_sender.cmd  hotirjam-bridge-sender.cmd  install_windows.ps1  pyproject.toml
bridge/docs/: BRIDGE_RECEIVER_MAC.md  BRIDGE_SENDER_WINDOWS.md  M1_2_BRIDGE_SENDER_RUNTIME.md  M1_3_BRIDGE_RECEIVER_RUNTIME.md  M1_4_HTTP_LIVE_BRIDGE.md  M1_BRIDGE_ARCHITECTURE.md  WINDOWS_CLI_INSTALL.md
bridge/src/hotirjam_bridge/: __init__.py  __main__.py  contracts.py  metrics.py
bridge/src/hotirjam_bridge/receiver/: __init__.py  __main__.py  app.py  dedupe.py  http_server.py  integrity.py  runtime.py  validate_dom.py  validate_envelope.py  writer.py
bridge/src/hotirjam_bridge/sender/: __init__.py  __main__.py  app.py  envelope.py  http_client.py  http_runtime.py  runtime.py  tail.py  validate_tick.py
bridge/tests/: test_contracts.py  test_envelope_identity_v2.py  test_m12_bridge_sender_runtime.py  test_m13_bridge_receiver_runtime.py  test_m14_http_live_bridge.py  test_sender_http_evidence.py  test_sender_status_link_health.py  test_windows_cli_entrypoints.py
config/: retention.json
control/: README.md  _hotirjam_common.sh  control_center.sh  restart_hotirjam.sh  run_live_validator.sh  start_hotirjam.sh  status_hotirjam.sh  stop_hotirjam.sh
docs/: H681_DOUBLE_HIERARCHY_EVALUATE_EVIDENCE.md  H682_ALTERNATIVE1_CERTIFICATION.md  H691_OBJECTIVE_DIAGNOSTICS_SERIALIZATION_AUDIT.md  H693_DIAGNOSTIC_REPRESENTATION_CERTIFICATION_PLAN.md  H694_ALTERNATIVE_E_CERTIFICATION.md  H69_SNAPSHOT_LOGGER_CERTIFICATION.md  H70_MISSION_CONTROL_UI_ARCHITECTURE.md  H71_MISSION_CONTROL_SHELL_CERTIFICATION.md  H72A1_MISSION_CONTROL_RENDERING_STABILIZATION.md  H72A_MISSION_CONTROL_RUNTIME_INTEGRATION.md  H72B_TERMINAL_DISPLAY_ARCHITECTURE.md  H72C_TERMINAL_DISPLAY_IMPLEMENTATION.md  H72_MISSION_CONTROL_LIVE_WIRING_CERTIFICATION.md  H73_PROFESSIONAL_OPERATOR_UX.md  H80_LIVE_OBSERVATION_CERTIFICATION.md  H81A_PRODUCTION_DISPLAY_CLEANUP.md  H81_REPLAY_VALIDATOR_CERTIFICATION.md  HOTIRJAM_AI_5_CONSTITUTION_V1.md  OBJECTIVE_ENGINEERING_VALIDATION_PHASE_A.md  SPRINT_37_ENTRY_TIMING_AUDIT.md  SPRINT_39_DECISION_HORIZON_AUDIT.md  SPRINT_40_MARKET_MEMORY_ARCHITECTURE.md  SPRINT_42_MARKET_MEMORY_LIVE_AUDIT.md  SPRINT_I0_INITIATIVE_ENGINE_ARCHITECTURE.md
gateway/: README.md  pyproject.toml
gateway/ninjatrader/: README.md
gateway/ninjatrader/AddOns/: GatewayClient.cs  HotirjamGatewayAddOn.cs
gateway/src/hotirjam_gateway/: __init__.py  connection_manager.py  connection_state.py  envelope.py  health.py  heartbeat.py  lifecycle.py  logging.py
gateway/src/hotirjam_gateway/transport/: __init__.py  receiver.py  server.py  session.py
gateway/tests/: test_sprint1_skeleton.py  test_sprint2_1_transport.py
tests/: test_app.py  test_controller_dom.py  test_controller_live.py  test_controller_physics.py  test_controller_transition.py  test_dashboard_trade_plan_ux.py  test_decision_assessment.py  test_decision_evaluation.py  test_decision_foundation.py  test_decision_intent.py  test_dom_health.py  test_dom_ingress.py  test_dom_parser.py  test_entry_timing.py  (+30 more)
(+255 files in other folders)
