[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotirjam-ai5"
version = "0.5.0"
description = "HOTIRJAM AI 5 — MNQ futures assistant (Sprint 5: physics measurements)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "HOTIRJAM" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hotirjam-ai5 = "hotirjam_ai5.dashboard.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
